# obsidian-mcp-for-claude-code

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.en.md  README.md
.claude/: settings.json
src/: lib.rs  main.rs  obsidian.rs  secret.rs  tools.rs
tests/: integration.rs
