[package]
name = "obsidian-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "obsidian_mcp"
path = "src/lib.rs"

[[bin]]
name = "obsidian-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
glob-match = "0.2"
anyhow = "1"
